<resources>
    <string name="app_name">BAC-Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="untappd_settings">Untappd Settings</string>
    <string name="user_settings">Settings</string>
    <string name="untappd_search">Untappd Search</string>
    <string name="auth_app_btn">Authorize App</string>
    <string name="sign_out">Log Out</string>
    <string name="untappd_about_auth">Authorise this application with your Untappd account to enable searching.</string>
    <string name="auth_untappd_dialog_title">Authorize Untappd</string>
    <string name="loading_user_data">Loading User Data...</string>
    <string name="searching_beers">Searching...</string>
    <string name="add_untappd_drink_button">Add Untappd Drink</string>
    <string name="drink_name">Drink Name</string>
    <string name="drink_volume_oz">Volume (oz)</string>
    <string name="drink_alcohol_content_abv">Alcohol Content (% vol.)</string>
    <string name="drink_start_time_label">Drink Started</string>
    <string name="finish_drink_checkbox_label">Finish drink using menu button</string>
    <string name="drink_end_time_label">Finished Drink</string>
    <string name="add_drink_button">ADD DRINK</string>
    <string name="sober_in">SOBER IN:</string>
    <string name="current_BAC">CURRENT BAC:</string>
    <string name="max_BAC">FUTURE BAC:</string>
    <string name="finish_drink">FINISH DRINK</string>
    <string name="choose_option">Choose and Option</string>
    <string name="history_label">YOUR HISTORY:</string>
    <string name="heightText">Height</string>
    <string name="feet_text">Feet:</string>
    <string name="inches_text">Inches:</string>
    <string name="weight_text">Weight</string>
    <string name="lbs_text">Pounds:</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="food_amount_text">Amount of food in stomach</string>
    <string name="empty_text">Empty</string>
    <string name="full_text">Full</string>
    <string name="running_low_text">Running low</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="satisfied_text">Satisfied</string>
    <string name="sex_text">Sex</string>
    <string name="about">About</string>
    <string name="try_again">Something went wrong, plase try again.</string>
    <string name="about_title">About</string>
    <string name="about_text">
         Abdul Merhi\nCaitlin Loney\nChristian Schroeder\nDan Shultz\nHorus Cuevas\nLindsey Nicolaysen
    </string>
    <string name="developed_by_text">Developed By:</string>
    <string name="about_formulas">
        Formulas: \n
        ((A*0.8*z)/Wr)-Bt=Ct\n
        A: number of drinks consumed\n
        W: body weight (ounces)\n
        r: body water distribution constant\n
        (L/Kg)\n
        Ct: BAC (Kg/L)\n
        B: alcohol elimination rate (Kg/L/hr)\n
        t: time since first drink (hours)\n
        0.8: Widmark\'s constant\n
        z: fluid ounces of alcohol/drink
    </string>
    <string name="disclaimer">
        Always Drink Responsibly\n\n
        This app uses several factors to estimate your BAC. It is not a legal or exact measurement!\n\n
        The Developers of this application assume no responsibility for any user actions or outcomes.\n\n
        Use at your own risk.
    </string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_button">Accept</string>
</resources>
