<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/edge_padding">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drinkNameEditText"
        android:hint="Drink Name" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_volume_oz"
            android:id="@+id/drinkVolumeLabel"
            android:paddingRight="@dimen/edge_padding"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinkVolumeEditText"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"
            android:hint="0.0"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_alcohol_content_abv"
            android:id="@+id/drinkAlcoholContentLabel"
            android:paddingRight="@dimen/edge_padding"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinkAlcoholContentEditText"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"
            android:hint="0.0"
            android:gravity="right" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drinkStartedLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_start_time_label"
            android:id="@+id/drinkStartedLabel"
            android:layout_alignParentRight="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:11 PM"
            android:id="@+id/drinkStartedTimeButton"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/drinkStartedLabel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12/15/2015"
            android:id="@+id/drinkStartedDateButton"
            android:layout_toLeftOf="@+id/drinkStartedTimeButton"
            android:layout_below="@+id/drinkStartedLabel" />

    </RelativeLayout>

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_drink_checkbox_label"
        android:id="@+id/drinkFinishedCheckBox"
        android:checked="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drinkFinishedLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_end_time_label"
            android:id="@+id/drinkFinishedLabel"
            android:enabled="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:26 PM"
            android:id="@+id/drinkFinishedTimeButton"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:layout_below="@+id/drinkFinishedLabel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12/15/2015"
            android:id="@+id/drinkFinishedDateButton"
            android:layout_toLeftOf="@+id/drinkFinishedTimeButton"
            android:enabled="false"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/drinkFinishedLabel" />

    </RelativeLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_drink_button"
        android:id="@+id/addDrinkButton"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true" />

</LinearLayout>